--- a/CSS/huvudsida.css
+++ b/CSS/huvudsida.css
@@ -42,9 +42,6 @@ body {
     background-color: #f2f2f2;
   }
 
-  tr:hover {
-    background-color: #ddd;
-  }
 
   th {
     background-color: #4CAF50;
@@ -54,4 +51,11 @@ body {
   .rounded-table {
     border-radius: 1.5em;
     overflow: hidden;
+  }
+  tr.highlighted-row {
+    background-color: #FFCC99;
+  }
+  
+  tr:nth-child(even).highlighted-row {
+    background-color: #FFCC99; 
   }
